# interview-task

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
addons/interview/: __manifest__.py
addons/interview/data/: delivery_term_type_data.xml  ir_cron_data.xml
addons/interview/models/: __init__.py  delivery_term_type.py  sale_order.py  sale_order_line.py
addons/interview/security/: ir.model.access.csv
addons/interview/views/: delivery_term_type_views.xml  sale_order_views.xml
config/: odoo.conf
