[project]
name = "odoo-project"
version = "0.1.0"
description = "Odoo Development Project"
requires-python = ">=3.12"
dependencies = [
    # Core Odoo dependencies
    "babel==2.9.1",
    "chardet==4.0.0",
    "cryptography==3.4.8",
    "decorator==4.4.2",
    "docutils==0.17",
    "ebaysdk==2.1.5",
    "freezegun==1.1.0",
    "gevent==22.10.2",
    "greenlet==2.0.2",
    "idna==2.10",
    "jinja2==3.1.2",
    "libsass==0.22.0",
    "lxml==4.9.2",
    "markupsafe==2.1.1",
    "num2words==0.5.10",
    "ofxparse==0.21",
    "passlib==1.7.4",
    "pillow==9.4.0",
    "polib==1.1.1",
    "psutil==5.8.0",
    "psycopg2==2.9.5",
    "pydot==1.4.2",
    "pyopenssl==22.0.0",
    "pypdf2==1.26.0",
    "pypdf4==1.27.0",
    "pyserial==3.5",
    "python-dateutil==2.8.2",
    "pytz==2022.7",
    "pyusb==1.2.1",
    "qrcode==7.3.1",
    "reportlab==3.6.8",
    "requests==2.28.2",
    "urllib3==1.26.14",
    "vobject==0.9.6.1",
    "werkzeug==2.0.2",
    "xlrd==2.0.1",
    "xlsxwriter==3.0.8",
    "xlwt==1.3.0",
    "zeep==4.1.0",
    # Optional dependencies
    "python-ldap==3.4.0",
    "psycopg2-binary==2.9.5",
    "watchdog==2.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "black==24.10.0",
    "isort==5.13.2",
    "pytest==8.3.3",
    "pytest-odoo==0.5.0",
    "pytest-cov==6.0.0",
    "pre-commit==4.0.1",
]
lint = [
    "mypy==1.13.0",
    "types-requests==2.28.11.8",
    "types-python-dateutil==2.8.19.20240906",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".venv",
    "odoo",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "S", "C4", "PIE", "SIM", "RET"]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function calls in argument defaults
    "S101",  # Use of assert detected
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["ALL"]
"*/tests/*" = ["S101", "S106"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | odoo
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
known_odoo = ["odoo", "odoo.addons"]
known_first_party = ["addons"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "ODOO", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/odoo/*"]

[tool.pytest.ini_options]
testpaths = ["addons"]
addopts = "--cov=addons --cov-report=html --cov-report=term-missing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
exclude = ["odoo/", "venv/", ".venv/"]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true